fix navbar font size on mobile screen

--- a/css/small.css
+++ b/css/small.css
@@ -334,8 +334,8 @@ body {
     text-decoration: none;
     width: 100%;
     padding: 2rem 1rem;
-    font-size: 1.5rem;
-    font-weight: 400;
+    font-size: 1.6rem;
+    font-weight: 500;
     line-height: 1.5;
 }
 
